[project]
name = "langchainpractice2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "google>=3.0.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.56",
    "langchain-google-genai>=2.1.4",
    "langchain-google-vertexai>=2.0.21",
    "pydantic>=2.11.4",
    "pypdf>=5.4.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.0",
    "unstructured>=0.17.2",
]
